Overflow fixing

--- a/src/components/Characters/CharacterItem/CharacterItem.module.css
+++ b/src/components/Characters/CharacterItem/CharacterItem.module.css
@@ -98,8 +98,6 @@
 .item__button:hover {
   opacity: 0.9;
 }
-@media (min-width: 768px) {
-}
 @keyframes dead-dot-blink {
   0%,
   to {
