--- a/src/components/Episodes/EpisodeItem/EpisodeItem.module.css
+++ b/src/components/Episodes/EpisodeItem/EpisodeItem.module.css
@@ -5,6 +5,3 @@
 .item__card > p {
   font-size: 1rem;
 }
-@media (min-width: 48rem) {
-
-}
