--- a/src/components/Layout/Hero/Hero.module.css
+++ b/src/components/Layout/Hero/Hero.module.css
@@ -22,11 +22,6 @@
   margin: 1rem;
   text-align: center;
 }
-@media (min-width: 30rem) {
-  .hero .hero__card {
-    /* font-size: 1.5rem; */
-  }
-}
 @media (min-width: 48rem) {
   .hero {
     min-height: 30rem;
